syntax = "proto3";

package todoPackage;

service Todo {
  rpc createTodo(TodoItem) returns (TodoItem);
  rpc readTodos(_) returns (TodoItems);
  rpc readTodosStream(_) returns (stream TodoItem);
}

message _ {}

message TodoItem {
  int32 id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}